Build the union of geofencing zones

--- a/docs/examples/ibi/portland/router-config.json
+++ b/docs/examples/ibi/portland/router-config.json
@@ -39,7 +39,8 @@
       "frequencySec": 90,
       "network": "BIRD",
       "sourceType": "gbfs",
-      "url": "https://mds.bird.co/gbfs/v2/public/portland"
+      "url": "https://mds.bird.co/gbfs/v2/public/portland.gbfs",
+      "geofencingZones": "true"
     },
     {
       "type": "vehicle-rental",
